--- a/public/index.html
+++ b/public/index.html
@@ -10,15 +10,12 @@
   <body>
   <section class="container">
     <div class="row">
-      <div class="col-lg-5 col-sm-6"><h2 class="section-heading">ENGLISH</h2> 
-        <div id="content"></div>
-      </div>
+      <div class="col-lg-5 col-sm-6"><h2 class="section-heading">ENGLISH</h2> </div> 
+      <div class="col-lg-5 col-lg-offset-2 col-sm-6" ><h2 class="section-heading">KOREAN</h2></div> 
+    </div>
 
-      <div class="col-lg-5 col-lg-offset-2 col-sm-6" ><h2 class="section-heading">KOREAN</h2>
-        <div id="translatedContent"></div>
-      </div>  
-      
-    </div>  
+    <div id="content"></div>
+
   </section>
 
 
