--- a/20170107 almost done/public/index.html
+++ b/20170107 almost done/public/index.html
@@ -3,13 +3,9 @@
 <head>
 	<title>Translate Together</title>
 	  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+		<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="styles/bootstrap-social.css">
 		<link rel="stylesheet" type="text/css" href="styles/main.css">
-    <link href="styles/landing-page.css" rel="stylesheet">
-
-		<!-- Custom Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
     <!-- AngularJS & router & sanitize-->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.0/angular.min.js"></script>
@@ -39,6 +35,11 @@
 <body ng-app="mainApp">
 
 		<ui-view></ui-view>
+
+		<footer>
+
+		</footer>
+
 
 </body>
 </html>
