--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,9 @@
 		<link rel="stylesheet" type="text/css" href="styles/main.css">
     <link href="styles/landing-page.css" rel="stylesheet">
 
-		<!-- Custom Fonts -->
+		<!-- Custom Fonts & Material Design Lite-->
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+		<script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
 
     <!-- AngularJS & router & sanitize-->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.0/angular.min.js"></script>
@@ -27,11 +28,11 @@
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 		<!-- main javascripts -->
-    <script src="scripts/app.js"></script>
+    <!-- <script src="scripts/app.js"></script> -->
+		<script src="scripts/compressed.js"></script>		
 		<script src="scripts/routers.js"></script>
 
 
-		<!-- <script src="scripts/compressed.js"></script> -->
 
 
 </head>
