pretty reliable now

--- a/cicwebpages/01062017/become_a_candidate.html
+++ b/cicwebpages/01062017/become_a_candidate.html
@@ -1,189 +1,75 @@
 
-<header>
-  <h2 id="cn-cont">Determine your eligibility &mdash; Skilled trades</h2>
-</header>
-  <p>As of January 2015, we have a new system for people to apply to this program. It is called <a href="/english/immigrate/skilled/index.asp">Express Entry</a>.</p>
-  <p>The Federal Skilled Trades Program is for people who want to become permanent residents based on being qualified in a skilled trade.</p>
 
-
-
-
-
-  <h2>Minimum requirements</h2>
-  <p>To be eligible, you must:</p>
-    <p>* plan to live outside the province of Quebec (Note: The province of Quebec selects its own skilled workers. If you plan on living in Quebec, see <a href="/english/immigrate/quebec/index.asp">Quebec-selected skilled workers for more information</a>),</p>
-    <p>* meet the <a href="/english/immigrate/skilled/language.asp">required levels in English or French</a> for each language ability (speaking, reading, writing and listening),</p>
-    <p>* have at least two years of full-time work experience (or an equal amount of part-time work experience)<sup id="fn*-rf"><a class="fn-lnk" href="#fn*"><span class="wb-inv">Footnote </span>*</a></sup> in a skilled trade within the five years before you apply,</p>
-
-
-
-
-
-		<p>* meet the job requirements for that skilled trade as set out in the National Occupational Classification (NOC), except for needing a certificate of qualification, and</p>
-    <p>* have an <a href="/english/immigrate/skilled/offer.asp">offer of full-time employment</a> for a total period of at least one year<sup id="fn**-rf"><a class="fn-lnk" href="#fn**"><span class="wb-inv">Footnote </span>**</a></sup> <strong>or</strong> a certificate of qualification in that skilled trade issued by a Canadian provincial or territorial authority.<sup id="fn***-rf"><a class="fn-lnk" href="#fn***"><span class="wb-inv">Footnote </span>***</a></sup></p>
-
-
-
-
-	<aside class="wb-fnote" role="note">
-    <h3 id="fn" class="wb-inv">Footnotes</h3>
-    <dl>
-      <dt>Footnote *</dt>
-      <dd id="fn*">
-        <p>This means you have to work a total of at least 30&nbsp;hours over a period of one week for two years in your skilled trade within the five years before you apply. For example:</p>
-        <div class="mrgn-lft-md">
-        <h4 class="mrgn-lft-xlg">Full Time</h4>
-        <p>30 hours/week for 12 months = 1 year full time (1,560 hours)</p>
-        <h4 class="mrgn-lft-xlg">Part time</h4>
-        <p>15 hours/week for 24 months = 1 year full time (1,560 hours)<br>
-        <strong>OR</strong><br>
-    30 hours/week for 12 months at more than one job = 1 year full time (1,560 hours)</p>
-    </div>
-        <p class="fn-rtn"> <a href="#fn*-rf"><span class="wb-inv">Return to footnote </span>*<span class="wb-inv"> referrer</span></a></p>
-      </dd>
-      <dt>Footnote **</dt>
-      <dd id="fn**">
-        <p>Up to two employers can commit to employing you for at least one year of continuous full-time work, meaning a total of at least 30&nbsp;hours of work per week.</p>
-        <p class="fn-rtn"> <a href="#fn**-rf"><span class="wb-inv">Return to footnote </span>**<span class="wb-inv"> referrer</span></a></p>
-      </dd>
-      <dt>Footnote ***</dt>
-      <dd id="fn***">
-        <p>In Canada, provinces and territories issue certificates of qualification in the skilled trades. To get a certificate, the provincial or territorial trades authority must assess your training, trade experience and skills to decide if you are eligible to write an exam to be certified.</p>
-        <p class="fn-rtn"> <a href="#fn***-rf"><span class="wb-inv">Return to footnote </span>***<span class="wb-inv"> referrer</span></a></p>
-      </dd>
-    </dl>
-  </aside>
-
-
-
-
-
-
-  <h2 id="noc">Skilled work experience</h2>
-  <p>Skilled Trades currently eligible for the Federal Skilled Trades Program are organized under these major and minor groups of the NOC:</p>
+<h2 id="cn-cont">Become a candidate – Skilled immigrants (Express Entry)</h2>
+  <p><strong>Note:</strong> We have updated the Express Entry system:</p>
   <ul>
-    <li>Major Group 72, industrial, electrical and construction trades,</li>
-    <li>Major Group 73, maintenance and equipment operation trades,</li>
-    <li>Major Group 82, supervisors and technical jobs in natural resources, agriculture and related production,</li>
-    <li>Major Group 92, processing, manufacturing and utilities supervisors and central control operators,</li>
-    <li>Minor Group 632, chefs and cooks, and</li>
-    <li>Minor Group 633, butchers and bakers.</li>
+    <li>you can now earn points for study in Canada</li>
+    <li>a valid job offer now only needs to be for one year, and some job offers no longer need an LMIA</li>
+    <li>the amount of points you get for a job offer has changed.</li>
+    <li>you now have 90 days to apply instead of 60.</li>
   </ul>
 
 
 
 
-  <p>These major NOC groups are subdivided into different occupations. (All are NOC skill type B.)</p>
-  <p> You must show that you did the duties set out in the lead statement of the occupational description in the NOC, including all the essential duties and most of the main duties listed.</p>
-  <p> If you do not show that your experience meets the description in the NOC, we will not accept your application.</p>
-  <p> <a href="/english/immigrate/skilled/noc.asp">Find out the NOC code, title and skill type or level for your job</a>.</p>
+  <p><a href="/english/department/media/notices/2016-11-19.asp">Find out more about these changes</a> and how they may affect you.</p>
+<p>If you want to come to Canada as a skilled immigrant, your first step is to become a candidate in the Express Entry pool.</p>
+  <p>If you are eligible:</p>
+  <ol>
+    <li>we will place you in a pool with others who are also eligible and give you a score,</li>
+    <li>we will then <a href="/english/express-entry/criteria-crs.asp">rank you</a> using several factors, and</li>
+    <li>if you are one of the top candidates, you will be invited to apply to be a permanent resident of Canada.</li>
+  </ol>
 
 
 
 
-	<p> Federal Skilled Trades Program applications must be made based on the 2011 version of the <a href="http://www5.hrsdc.gc.ca/noc/english/noc/2011/Welcome.aspx">NOC</a>. However, if the application includes a <a href="/english/helpcentre/answer.asp?q=163&amp;t=17">Labour Market Impact Assessment</a> (previously Labour Market Opinion or LMO) from Employment and Social Development Canada based on the 2006 version of the NOC, it will be accepted by CIC as long as the applicant&rsquo;s occupation corresponds to a 2011 NOC code that is eligible for the program.</p>
+
+
+  <h2>Determine your eligibility</h2>
+  <p>Use the online tool, <a href="/ctc-vac/ee-start.asp">Come to Canada</a>, to see if you meet the criteria to get into the Express Entry pool (or read about the <a href="/english/immigrate/skilled/apply-who-express.asp">eligibility criteria for Express Entry</a>).</p>
 
 
 
 
-	<h2>Education</h2>
-  <p>There is no education requirement for the Federal Skilled Trades Program. But, if you want to earn points for your education under Express Entry, you either need:</p>
+
+  <h2>Submit your profile</h2>
+  <p>If you are eligible, fill out your Express Entry profile online. You will need to create a MyCIC account to do this. It will ask you about your: </p>
   <ul>
-    <li>a Canadian post-secondary certificate, diploma or degree
-    <p class="text-uppercase">Or</p>
-   </li>
-    <li>a completed foreign <a href="/english/helpcentre/glossary.asp#educational_credential">credential</a>, and</li>
-    <li>an <a href="/english/immigrate/skilled/assessment.asp">Educational Credential  Assessment (ECA) report  from an  agency approved by CIC</a>. [The report must   show your foreign education is equal to a  completed Canadian secondary (high  school) or post-secondary certificate, diploma or degree.]</li>
-</ul>
-  <div class="alert alert-info">
-  <p><strong>Note:</strong> You will only  benefit from getting an ECA if your  foreign education is equal to a completed Canadian high school diploma or  greater.</p>
-  </div>
-
-
-
-
-
-  <h2>Language ability</h2>
-  <p>You must:</p>
-  <ul>
-    <li>meet the <a href="/english/immigrate/skilled/language.asp">minimum language level</a> of Canadian Language Benchmark (CLB) 5 for speaking and listening, and Canadian Language Benchmark (CLB) 4 for reading and writing, and</li>
+    <li>language test scores,</li>
+    <li>education and educational credential assessment (if you need one) </li>
+    <li>work experience, and</li>
+    <li>other information we need in order to assess you.</li>
   </ul>
-  <ul>
-    <li><a href="/english/immigrate/skilled/language-testing.asp">take a language test</a> approved by Citizenship and Immigration Canada (CIC) that shows you meet the level for speaking, listening, reading and writing.</li>
-  </ul>
-  <p>You must show that you meet the <a href="/english/immigrate/skilled/language.asp">requirements in English or French</a> by including the <a href="/english/immigrate/skilled/language-testing.asp">test results</a> when you complete your Express Entry profile. Your test results must not be more than two years old on the day you apply for permanent residence.</p>
-
-
-
-
-	<h2>Principal applicant</h2>
-  <p>If you are married or live with a <a href="/english/helpcentre/glossary.asp#common_law_partner">common-law partner</a> who also meets the above conditions, you can decide which one of you will apply under Express Entry as the principal (main) applicant.</p>
-  <p>A common-law partner is a person who has lived with you in a conjugal relationship for at least one year. Common-law partner refers to both opposite-sex and same-sex couples.</p>
-  <p> Check to see which one of you is most likely to be found eligible. That person should apply as the principal applicant.</p>
-
-
-
-	<h2>Other requirements</h2>
-  <ul>
-    <li>You must be admissible to Canada. <a href="/english/information/inadmissibility/index.asp">Find out more about inadmissibility</a>.</li>
-    <li>You must plan to live outside the province of <a href="http://www.immigration-quebec.gouv.qc.ca/en/index.html">Quebec</a>.</li>
-  </ul>
-
-
-
-
-  <h2 id="prov">Be assessed by the province or territory</h2>
-  <p>You will likely have to go to the province or territory to be assessed. You may also need an employer in Canada to give you experience and training.</p>
-  <p> You should go to the website of the body that governs trades for the province/territory where you would like to live and work. The process is different depending on where you want to go.</p>
-  <p> Each website has more details about whether you need a certificate of qualification to work in that province or territory in a specific skilled trade, and what you have to do to get one.</p>
-
-
-
-	<ul>
-    <li><a href="http://www.tradesecrets.org/">Alberta</a></li>
-    <li><a href="http://www.itabc.ca/apply-apprenticeship/challenging-exams">British Columbia</a></li>
-    <li><a href="http://www.manitoba.ca/tradecareers">Manitoba</a></li>
-    <li><a href="http://www2.gnb.ca/content/gnb/en/departments/post-secondary_education_training_and_labour/Skills/content/ApprenticeshipAndTrades/DesignatedOccupations.html">New Brunswick</a></li>
-    <li><a href="http://www.aes.gov.nl.ca/app">Newfoundland and Labrador</a></li>
-    <li><a href="https://www.ece.gov.nt.ca/advanced-education/apprenticeship-trade-occupation-certification/apprenticeship-occupation-information">Northwest Territories</a></li>
-    <li><a href="http://nsapprenticeship.ca/">Nova Scotia</a></li>
-    <li><a href="http://www.gov.nu.ca/family-services/information/apprenticeship-trade-and-occupations-certification">Nunavut</a></li>
-    <li><a href="http://www.ontarioimmigration.ca/en/working/OI_HOW_WORK_TRADES.html">Ontario</a></li>
-    <li><a href="http://www.apprenticeship.pe.ca/">Prince Edward Island</a></li>
-    <li><a href="http://www.saskapprenticeship.ca/">Saskatchewan</a></li>
-    <li><a href="http://www.education.gov.yk.ca/certification.html">Yukon</a></li>
-  </ul>
-  <p>If you work in a skilled trade and want to live in Canada permanently, use our <a href="/ctc-vac/ee-start.asp">Come to Canada</a> tool to see if you are eligible for the Express Entry pool.</p>
+  <p>There is no cost to complete and submit an <a href="/english/immigrate/skilled/profile.asp">Express Entry profile</a>.</p>
 
 
 
 
 
+	<h2>How the pool works</h2>
+  <p>If you create an Express Entry profile and you are eligible, you will be put into the Express Entry pool of candidates. Find out what happens <a href="/english/immigrate/skilled/pool.asp">once you are in the pool</a>. </p>
+  <h2>Understand the scoring and ranking system</h2>
+  <p>Based on the information you put in your profile, you will be <a href="/english/express-entry/criteria-crs.asp">given a score and ranked against others in the pool</a>.</p>
 
 
 
 
-
-
-
-
+  <h2>Candidate rounds of invitations</h2>
+  <p>We will  regularly issue invitations to <a href="/english/express-entry/rounds.asp">top candidates</a> from the pool so they  can apply for permanent residence.</p>
+  <h2>Invitations to apply</h2>
+  <p>If you get an <a href="/english/immigrate/skilled/invitations.asp">invitation to apply</a>, you will be able to  apply for permanent residence online.</p>
+  <h2>Read the guide</h2>
+  <p>You can <a href="/english/immigrate/skilled/instruction-guide.asp">review the instruction guide</a> for more information.</p>
 
 
 </section>
 
-  <section id="push-message">
-    <div class="col-md-4">
-<h2>Related links</h2>
-<ul>
-  <li><a href="/english/department/media/notices/notice-fraud.asp">Don&rsquo;t be a victim of a scam</a></li>
-</ul>
-</div>
-<div class="col-md-4">
-&nbsp;
-</div><div class="col-md-4">
+<section id="push-message">
+  <div class="col-md-4">
 &nbsp;
 </div>
-  </section>
+</section>
 
 <!-- Content ends / Fin du contenue -->
 
@@ -199,7 +85,7 @@
 	<div class="datemod col-xs-12 mrgn-tp-lg">
 		<dl id="wb-dtmd">
 			<dt>Date Modified:&#32;</dt>
-			<dd><time property="dateModified">2016-06-15</time></dd>
+			<dd><time property="dateModified">2016-11-09</time></dd>
 		</dl>
 	</div>
 </div>
@@ -440,7 +326,7 @@ function check1()
 
 
 </body>
-</html><script id="f5_cspm">(function(){var f5_cspm={f5_p:'PGGJLKIILLNNONNEAHHDBBCCIEIPBNLNEIPIHNMOJHIPJCKCFNMFHKPMCBMFANCBMBGBLGMHEDEDJGEGAKKALHHDADDJPJGFBOCKMMHIBPIKBCDPBCLLCNIBMHHMFKGA',setCharAt:function(str,index,chr){if(index>str.length-1)return str;return str.substr(0,index)+chr+str.substr(index+1);},get_byte:function(str,i){var s=(i/16)|0;i=(i&15);s=s*32;return((str.charCodeAt(i+16+s)-65)<<4)|(str.charCodeAt(i+s)-65);},set_byte:function(str,i,b){var s=(i/16)|0;i=(i&15);s=s*32;str=f5_cspm.setCharAt(str,(i+16+s),String.fromCharCode((b>>4)+65));str=f5_cspm.setCharAt(str,(i+s),String.fromCharCode((b&15)+65));return str;},set_latency:function(str,latency){latency=latency&0xffff;str=f5_cspm.set_byte(str,40,(latency>>8));str=f5_cspm.set_byte(str,41,(latency&0xff));str=f5_cspm.set_byte(str,35,2);return str;},wait_perf_data:function(){try{var wp=window.performance.timing;if(wp.loadEventEnd>0){var res=wp.loadEventEnd-wp.navigationStart;if(res<60001){var cookie_val=f5_cspm.set_latency(f5_cspm.f5_p,res);window.document.cookie='f5avr0766266057aaaaaaaaaaaaaaaa='+encodeURIComponent(cookie_val)+';path=/';}
+</html><script id="f5_cspm">(function(){var f5_cspm={f5_p:'KPAFJNMABMHHPAEDONGELDINHBFPONCKACBFHLKJJKFHCKHOJDCMLFGHOGBOFGEDNHMBFBDOIBFLKOCDAKIAOBMMALMDBAOLHMGANFLHNJOPEGMLHONFIKFDEIBJPGDO',setCharAt:function(str,index,chr){if(index>str.length-1)return str;return str.substr(0,index)+chr+str.substr(index+1);},get_byte:function(str,i){var s=(i/16)|0;i=(i&15);s=s*32;return((str.charCodeAt(i+16+s)-65)<<4)|(str.charCodeAt(i+s)-65);},set_byte:function(str,i,b){var s=(i/16)|0;i=(i&15);s=s*32;str=f5_cspm.setCharAt(str,(i+16+s),String.fromCharCode((b>>4)+65));str=f5_cspm.setCharAt(str,(i+s),String.fromCharCode((b&15)+65));return str;},set_latency:function(str,latency){latency=latency&0xffff;str=f5_cspm.set_byte(str,40,(latency>>8));str=f5_cspm.set_byte(str,41,(latency&0xff));str=f5_cspm.set_byte(str,35,2);return str;},wait_perf_data:function(){try{var wp=window.performance.timing;if(wp.loadEventEnd>0){var res=wp.loadEventEnd-wp.navigationStart;if(res<60001){var cookie_val=f5_cspm.set_latency(f5_cspm.f5_p,res);window.document.cookie='f5avr0766266057aaaaaaaaaaaaaaaa='+encodeURIComponent(cookie_val)+';path=/';}
 return;}}
 catch(err){return;}
 setTimeout(f5_cspm.wait_perf_data,100);return;},go:function(){var chunk=window.document.cookie.split(/\s*;\s*/);for(var i=0;i<chunk.length;++i){var pair=chunk[i].split(/\s*=\s*/);if(pair[0]=='f5_cspm'&&pair[1]=='1234')
