--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
 
 		<!-- main javascripts -->
     <!-- <script src="scripts/app.js"></script> -->
-		<script src="scripts/compressed.js"></script>		
+		<script src="scripts/compressed_v1.js"></script>
 		<script src="scripts/routers.js"></script>
 
 
