addTranslation separated into several methods

--- a/public/index.html
+++ b/public/index.html
@@ -28,8 +28,8 @@
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 		<!-- main javascripts -->
-    <!-- <script src="scripts/app.js"></script> -->
-		<script src="scripts/compressed_v1.js"></script>
+    <script src="scripts/app.js"></script>
+		<!-- <script src="scripts/compressed_v1.js"></script> -->
 		<script src="scripts/routers.js"></script>
 
 
